--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "pm": "^2.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.5",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
